Switch to plugin based backup of cnpg

--- a/cluster-home/operations/storage/cnpg/scheduled-backup.yaml
+++ b/cluster-home/operations/storage/cnpg/scheduled-backup.yaml
@@ -5,8 +5,39 @@ metadata:
   name: cnpg-scheduled-backup
   namespace: storage
 spec:
-  schedule: "30 3 * * *"
-  backupOwnerReference: self
   cluster:
     name: buvis-pg-cluster
+  schedule: "30 3 * * *" # Daily at 3:30 AM
+  backupOwnerReference: self
   immediate: true
+  method: plugin
+  pluginConfiguration:
+    name: barman-cloud.cloudnative-pg.io
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: ScheduledBackup
+metadata:
+  name: cnpg-weekly-backup
+  namespace: storage
+spec:
+  cluster:
+    name: buvis-pg-cluster
+  schedule: "0 2 * * 0" # Weekly on Sunday at 2 AM
+  backupOwnerReference: self
+  method: plugin
+  pluginConfiguration:
+    name: barman-cloud.cloudnative-pg.io
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: ScheduledBackup
+metadata:
+  name: cnpg-monthly-backup
+  namespace: storage
+spec:
+  cluster:
+    name: buvis-pg-cluster
+  schedule: "0 1 1 * *" # Monthly on 1st day at 1 AM
+  backupOwnerReference: self
+  method: plugin
+  pluginConfiguration:
+    name: barman-cloud.cloudnative-pg.io
