--- a/cluster-home/operations/storage/cnpg-plugin-barman-cloud/b2-backup-buvis-home-cnpg-secret.yaml
+++ b/cluster-home/operations/storage/cnpg-plugin-barman-cloud/b2-backup-buvis-home-cnpg-secret.yaml
@@ -2,10 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cnpg-barman-inline
+  name: b2-backup-buvis-home-cnpg
   namespace: storage
   annotations:
-    # Tell Flux to substitute these values from cluster-secret-vars
     kustomize.toolkit.fluxcd.io/substitute: enabled
 type: Opaque
 stringData:
