Wai with objectstore

--- a/cluster-home/operations/flux-system/dependencies/kustomization.yaml
+++ b/cluster-home/operations/flux-system/dependencies/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
   - longhorn.yaml
   - kube-prometheus-stack.yaml
   - cnpg.yaml
+  - plugin-barman-cloud.yaml
+  - barman-cloud-objectstore.yaml
