Fix name of secrets to substitute from

--- a/cluster-home/operations/flux-system/dependencies/cnpg-plugin-barman-cloud.yaml
+++ b/cluster-home/operations/flux-system/dependencies/cnpg-plugin-barman-cloud.yaml
@@ -20,4 +20,4 @@ spec:
       - kind: ConfigMap
         name: cluster-config
       - kind: Secret
-        name: cluster-secrets
+        name: cluster-secret-vars
