--- a/cluster-home/operations/storage/cnpg/scheduled-backup.yaml
+++ b/cluster-home/operations/storage/cnpg/scheduled-backup.yaml
@@ -2,14 +2,13 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
 metadata:
-  name: cnpg-scheduled-backup
+  name: cnpg-daily-backup
   namespace: storage
 spec:
   cluster:
     name: buvis-pg-cluster
   schedule: "0 30 3 * * *" # Daily at 3:30 AM
   backupOwnerReference: self
-  immediate: true
   method: plugin
   pluginConfiguration:
     name: barman-cloud.cloudnative-pg.io
