Exclude adhov backup manifest

--- a/cluster-home/operations/flux-system/flux-system-gitrepository.patch.yaml
+++ b/cluster-home/operations/flux-system/flux-system-gitrepository.patch.yaml
@@ -10,3 +10,5 @@ spec:
     /*
     # include manifests
     !/**/*.yaml
+    # exclude manually applied manifests
+    /operations/storage/cnpg/adhoc-backup.yaml
