--- a/cluster-home/operations/storage/cnpg/adhoc-backup.yaml
+++ b/cluster-home/operations/storage/cnpg/adhoc-backup.yaml
@@ -9,4 +9,6 @@ spec:
     name: buvis-pg-cluster
   method: plugin
   pluginConfiguration:
-    name: barman-cloud.cloudnative-pg.io
+    name: plugin-barman-cloud.cloudnative-pg.io
+    parameters:
+      barmanObjectName: buvis-pg-backup
