--- a/cluster-home/operations/storage/cnpg/scheduled-backup.yaml
+++ b/cluster-home/operations/storage/cnpg/scheduled-backup.yaml
@@ -11,7 +11,9 @@ spec:
   backupOwnerReference: self
   method: plugin
   pluginConfiguration:
-    name: barman-cloud.cloudnative-pg.io
+    name: plugin-barman-cloud.cloudnative-pg.io
+    parameters:
+      barmanObjectName: buvis-pg-backup
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
@@ -25,7 +27,9 @@ spec:
   backupOwnerReference: self
   method: plugin
   pluginConfiguration:
-    name: barman-cloud.cloudnative-pg.io
+    name: plugin-barman-cloud.cloudnative-pg.io
+    parameters:
+      barmanObjectName: buvis-pg-backup
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
@@ -39,4 +43,6 @@ spec:
   backupOwnerReference: self
   method: plugin
   pluginConfiguration:
-    name: barman-cloud.cloudnative-pg.io
+    name: plugin-barman-cloud.cloudnative-pg.io
+    parameters:
+      barmanObjectName: buvis-pg-backup
