Create service account for barman plugin

--- a/cluster-home/operations/storage/cnpg-plugin-barman-cloud/helmrelease.yaml
+++ b/cluster-home/operations/storage/cnpg-plugin-barman-cloud/helmrelease.yaml
@@ -26,4 +26,5 @@ spec:
       tag: "v0.6.0"
       pullPolicy: IfNotPresent
     serviceAccount:
+      create: true
       name: plugin-barman-cloud
