Fix namespace for barman plugin

--- a/cluster-home/operations/storage/cnpg-plugin-barman-cloud/manifest.yaml
+++ b/cluster-home/operations/storage/cnpg-plugin-barman-cloud/manifest.yaml
@@ -637,7 +637,7 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/name: plugin-barman-cloud
   name: plugin-barman-cloud
-  namespace: cnpg-system
+  namespace: storage
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -646,7 +646,7 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/name: plugin-barman-cloud
   name: leader-election-role
-  namespace: cnpg-system
+  namespace: storage
 rules:
 - apiGroups:
   - ""
@@ -833,7 +833,7 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/name: plugin-barman-cloud
   name: leader-election-rolebinding
-  namespace: cnpg-system
+  namespace: storage
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -841,7 +841,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: plugin-barman-cloud
-  namespace: cnpg-system
+  namespace: storage
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -854,7 +854,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: plugin-barman-cloud
-  namespace: cnpg-system
+  namespace: storage
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -870,7 +870,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: plugin-barman-cloud
-  namespace: cnpg-system
+  namespace: storage
 ---
 apiVersion: v1
 data:
@@ -880,7 +880,7 @@ data:
 kind: Secret
 metadata:
   name: plugin-barman-cloud-hkg64h25m2
-  namespace: cnpg-system
+  namespace: storage
 type: Opaque
 ---
 apiVersion: v1
@@ -894,7 +894,7 @@ metadata:
     app: barman-cloud
     cnpg.io/pluginName: barman-cloud.cloudnative-pg.io
   name: barman-cloud
-  namespace: cnpg-system
+  namespace: storage
 spec:
   ports:
   - port: 9090
@@ -909,7 +909,7 @@ metadata:
   labels:
     app: barman-cloud
   name: barman-cloud
-  namespace: cnpg-system
+  namespace: storage
 spec:
   replicas: 1
   selector:
@@ -980,7 +980,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: barman-cloud-client
-  namespace: cnpg-system
+  namespace: storage
 spec:
   commonName: barman-cloud-client
   duration: 2160h
@@ -998,7 +998,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: barman-cloud-server
-  namespace: cnpg-system
+  namespace: storage
 spec:
   commonName: barman-cloud
   dnsNames:
@@ -1018,6 +1018,6 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: selfsigned-issuer
-  namespace: cnpg-system
+  namespace: storage
 spec:
   selfSigned: {}
