--- a/cluster-home/operations/storage/cnpg/databases/authentik.yaml
+++ b/cluster-home/operations/storage/cnpg/databases/authentik.yaml
@@ -1,4 +1,14 @@
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: authentik-db-owner
+  namespace: storage
+type: kubernetes.io/basic-auth
+stringData:
+  username: authentik
+  password: ${SECRET_AUTHENTIK_DB_PASSWORD}
+---
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
