--- a/cluster-home/operations/storage/cnpg/databases/linkace.yaml
+++ b/cluster-home/operations/storage/cnpg/databases/linkace.yaml
@@ -1,4 +1,14 @@
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: linkace-db-owner
+  namespace: storage
+type: kubernetes.io/basic-auth
+stringData:
+  username: linkace
+  password: ${SECRET_LINKACE_DB_PASSWORD}
+---
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
