--- a/cluster-home/operations/storage/kopia/jobs/kopia-sync-to-b2.yaml
+++ b/cluster-home/operations/storage/kopia/jobs/kopia-sync-to-b2.yaml
@@ -43,12 +43,16 @@ spec:
                   value: /snapshots/logs
                 - name: KOPIA_PASSWORD
                   value: ${SECRET_KOPIA_PASSWORD}
+                - name: AWS_ACCESS_KEY_ID
+                  value: ${SECRET_B2_KOPIA_KEY_ID}
+                - name: AWS_SECRET_ACCESS_KEY
+                  value: ${SECRET_B2_KOPIA_APPLICATION_KEY}
               command:
                 - /bin/bash
                 - -c
                 - |
                   printf "\e[1;32m%-6s\e[m\n" "[01/03] Connect to repo ..."       && kopia repo connect filesystem --path=/snapshots --override-hostname=cluster --override-username=root
-                  printf "\e[1;32m%-6s\e[m\n" "[02/03] Sync repository to B2 ..." && kopia repository sync-to s3 --endpoint="s3.us-west-000.backblazeb2.com" --bucket=backup-buvis-home-kopia --access-key=${SECRET_B2_KOPIA_KEY_ID} --secret-access-key=${SECRET_B2_KOPIA_APPLICATION_KEY}
+                  printf "\e[1;32m%-6s\e[m\n" "[02/03] Sync repository to B2 ..." && kopia repository sync-to s3 --endpoint="s3.us-west-000.backblazeb2.com" --bucket=backup-buvis-home-kopia
                   printf "\e[1;32m%-6s\e[m\n" "[03/03] Disconnect from repo ..."  && kopia repo disconnect
               volumeMounts:
                 - name: snapshots
