--- a/cluster-home/operations/gtd/linkace/manifests/configmap.yaml
+++ b/cluster-home/operations/gtd/linkace/manifests/configmap.yaml
@@ -15,13 +15,13 @@ data:
     ## Configuration of the database connection
     ## Attention: Those settings are configured during the web setup, please do not modify them now.
     # Set the database driver (mysql, pgsql, sqlsrv)
-    DB_CONNECTION=mysql
+    DB_CONNECTION=pgsql
     # Set the host of your database here
-    DB_HOST=linkace-db-mariadb.gtd
+    DB_HOST=buvis-pg-cluster-rw.storage
     # Set the port of your database here
-    DB_PORT=3306
+    DB_PORT=5432
     # Set the database name here
     DB_DATABASE=linkace
     # Set both username and password of the user accessing the database
     DB_USERNAME=linkace
-    DB_PASSWORD=${SECRET_LINKACE_DB_PASSWORD}
+    DB_PASSWORD=${SECRET_LINKACE_PG_PASSWORD}
