--- a/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
+++ b/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
@@ -23,10 +23,10 @@ spec:
           name: linkace
           ports:
             - containerPort: 80
-          volumeMounts:
-            - name: linkace-env
-              mountPath: /app/.env
-              subPath: env
+          # volumeMounts:
+          #   - name: linkace-env
+          #     mountPath: /app/.env
+          #     subPath: env
       restartPolicy: Always
       volumes:
         - name: linkace-env
