--- a/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
+++ b/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
@@ -27,10 +27,13 @@ spec:
           command: ["sh", "-c"]
           args:
             - >
+              php artisan config:clear &&
+              php artisan cache:clear &&
+              php artisan route:clear &&
               mkdir -p /app/bootstrap/cache &&
               rm -f /app/bootstrap/cache/*.php &&
               chmod -R 775 /app/bootstrap/cache &&
-              chmod 666 /app/.env
+              chmod 666 /app/.env &&
           volumeMounts:
             - name: la-cache
               mountPath: /app/bootstrap/cache
