--- a/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
+++ b/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
@@ -19,9 +19,22 @@ spec:
         app.kubernetes.io/name: linkace
     spec:
       volumes:
+        - name: fpm-override
+          configMap:
+            name: fpm-override
         - name: la-cache
           emptyDir: {}
+        - name: env-file
+          emptyDir: {}
       initContainers:
+        - name: make-empty-env
+          image: busybox:1.36
+          command: ["sh", "-c"]
+          args:
+            - "mkdir -p /work && touch /work/.env && chmod 664 /work/.env"
+          volumeMounts:
+            - name: env-file
+              mountPath: /work
         - name: artisan-clear
           image: ghcr.io/kovah/linkace:v2.2.0@sha256:baa826d946e04dff901995208aaf040b774ab02dbc89b47a1e016b6e3aabb144
           imagePullPolicy: IfNotPresent
@@ -58,4 +71,10 @@ spec:
           volumeMounts:
             - name: la-cache
               mountPath: /app/bootstrap/cache
+            - name: fpm-override
+              mountPath: /usr/local/etc/php-fpm.d/99-clear-env.conf
+              subPath: 99-clear-env.conf
+            - name: env-file
+              mountPath: /app/.env
+              subPath: .env
       restartPolicy: Always
