--- a/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
+++ b/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
@@ -19,19 +19,43 @@ spec:
         app.kubernetes.io/name: linkace
     spec:
       volumes:
-        - name: fpm-override
-          configMap:
-            name: fpm-override
         - name: la-cache
           emptyDir: {}
         - name: env-file
           emptyDir: {}
       initContainers:
-        - name: make-empty-env
+        - name: write-env
           image: busybox:1.36
           command: ["sh", "-c"]
           args:
-            - "mkdir -p /work && touch /work/.env && chmod 664 /work/.env"
+            - |
+              set -e
+              mkdir -p /work
+              {
+                printf 'APP_KEY=%s\n' "$APP_KEY";
+                printf 'DB_CONNECTION=%s\n' "${DB_CONNECTION:-pgsql}";
+                printf 'DB_HOST=%s\n' "$DB_HOST";
+                printf 'DB_PORT=%s\n' "${DB_PORT:-5432}";
+                printf 'DB_DATABASE=%s\n' "$DB_DATABASE";
+                printf 'DB_USERNAME=%s\n' "$DB_USERNAME";
+                printf 'DB_PASSWORD=%s\n' "$DB_PASSWORD";
+              } > /work/.env
+              chmod 640 /work/.env
+          env:
+            - name: APP_KEY
+              value: ${SECRET_LINKACE_APP_KEY}
+            - name: DB_CONNECTION
+              value: pgsql
+            - name: DB_HOST
+              value: buvis-pg-cluster-rw.storage
+            - name: DB_PORT
+              value: "5432"
+            - name: DB_DATABASE
+              value: linkace
+            - name: DB_USERNAME
+              value: linkace
+            - name: DB_PASSWORD
+              value: ${SECRET_LINKACE_PG_PASSWORD}
           volumeMounts:
             - name: env-file
               mountPath: /work
@@ -71,9 +95,6 @@ spec:
           volumeMounts:
             - name: la-cache
               mountPath: /app/bootstrap/cache
-            - name: fpm-override
-              mountPath: /usr/local/etc/php-fpm.d/99-clear-env.conf
-              subPath: 99-clear-env.conf
             - name: env-file
               mountPath: /app/.env
               subPath: .env
