--- a/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
+++ b/cluster-home/operations/gtd/linkace/manifests/deployment.yaml
@@ -4,15 +4,19 @@ kind: Deployment
 metadata:
   name: linkace
   namespace: gtd
+  labels:
+    app.kubernetes.io/name: linkace
 spec:
   replicas: 1
   selector:
-    matchLabels: { app.kubernetes.io/name: linkace }
+    matchLabels:
+      app.kubernetes.io/name: linkace
   strategy:
     type: Recreate
   template:
     metadata:
-      labels: { app.kubernetes.io/name: linkace }
+      labels:
+        app.kubernetes.io/name: linkace
     spec:
       volumes:
         - name: la-cache
@@ -20,10 +24,9 @@ spec:
         - name: env-file
           emptyDir: {}
       initContainers:
-        # Write a real .env from Pod env
         - name: write-env-as-app
-          image: ghcr.io/kovah/linkace:v2.2.0
-          workingDir: /var/www/html
+          image: linkace/linkace:latest
+          workingDir: /app
           command: ["sh", "-lc"]
           args:
             - >
@@ -57,22 +60,21 @@ spec:
             - name: env-file
               mountPath: /work
         - name: artisan-clear
-          image: ghcr.io/kovah/linkace:v2.2.0
-          workingDir: /var/www/html
+          image: ghcr.io/kovah/linkace:v2.2.0@sha256:baa826d946e04dff901995208aaf040b774ab02dbc89b47a1e016b6e3aabb144
+          imagePullPolicy: IfNotPresent
+          workingDir: /app
           command: ["sh", "-lc"]
           args:
             - >
-              php /var/www/html/artisan config:clear &&
-              php /var/www/html/artisan cache:clear &&
-              php /var/www/html/artisan route:clear || true
+              php /app/artisan config:clear &&
+              php /app/artisan cache:clear &&
+              php /app/artisan route:clear || true
           volumeMounts:
             - name: la-cache
-              mountPath: /var/www/html/bootstrap/cache
+              mountPath: /app/bootstrap/cache
       containers:
-        - name: linkace
-          image: ghcr.io/kovah/linkace:v2.2.0
-          ports:
-            - containerPort: 80
+        - image: ghcr.io/kovah/linkace:v2.2.0@sha256:baa826d946e04dff901995208aaf040b774ab02dbc89b47a1e016b6e3aabb144
+          name: linkace
           env:
             - name: APP_KEY
               value: ${SECRET_LINKACE_APP_KEY}
@@ -88,9 +90,12 @@ spec:
               value: linkace
             - name: DB_PASSWORD
               value: ${SECRET_LINKACE_PG_PASSWORD}
+          ports:
+            - containerPort: 80
           volumeMounts:
             - name: la-cache
-              mountPath: /var/www/html/bootstrap/cache
+              mountPath: /app/bootstrap/cache
             - name: env-file
-              mountPath: /var/www/html/.env
+              mountPath: /app/.env
               subPath: .env
+      restartPolicy: Always
