--- a/cluster-home/operations/gtd/radicale/helmrelease.yaml
+++ b/cluster-home/operations/gtd/radicale/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: baikal
+  name: radicale
   namespace: gtd
 spec:
   dependsOn:
