Fix controller name

--- a/cluster-home/operations/gtd/radicale/helmrelease.yaml
+++ b/cluster-home/operations/gtd/radicale/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
       interval: 5m
   values:
     controllers:
-      baikal:
+      radicale:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
