Remove unused config

--- a/cluster-home/operations/storage/cnpg/databases/buvis-pg-cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/databases/buvis-pg-cluster.yaml
@@ -37,3 +37,5 @@ spec:
               name: buvis-pg-cluster-rw-lb
             spec:
               type: LoadBalancer
+              loadBalancerIP: ${SVC_IP_CNPG_RW}
+              externalTrafficPolicy: Cluster
