--- a/cluster-home/operations/gtd/xandikos/helmrelease.yaml
+++ b/cluster-home/operations/gtd/xandikos/helmrelease.yaml
@@ -36,6 +36,13 @@ spec:
       xandikos:
         annotations:
           reloader.stakater.com/auto: "true"
+        pod:
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            runAsGroup: 1000
+            fsGroup: 1000
+            fsGroupChangePolicy: OnRootMismatch
         containers:
           app:
             image:
