--- a/cluster-home/operations/gtd/xandikos/helmrelease.yaml
+++ b/cluster-home/operations/gtd/xandikos/helmrelease.yaml
@@ -52,6 +52,8 @@ spec:
               - python3
               - -m
               - xandikos.web
+            env:
+              PYTHONUNBUFFERED: "1"
             args:
               - --listen-address=0.0.0.0
               - --dump-dav-xml
