Trying to fix macos contacts issues

--- a/cluster-home/operations/gtd/xandikos/helmrelease.yaml
+++ b/cluster-home/operations/gtd/xandikos/helmrelease.yaml
@@ -58,6 +58,7 @@ spec:
               - --listen-address=0.0.0.0
               - --dump-dav-xml
               - --debug
+              - --no-strict
               - --port=8000
               - -d
               - /data
