Allow bigger uploads to radicale

--- a/cluster-home/operations/gtd/radicale/helmrelease.yaml
+++ b/cluster-home/operations/gtd/radicale/helmrelease.yaml
@@ -52,6 +52,7 @@ spec:
         className: nginx
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
+          nginx.ingress.kubernetes.io/proxy-body-size: 100M
         hosts:
           - host: &hostName radicale.buvis.net
             paths:
