--- a/cluster-home/operations/storage/longhorn/helmrelease.yaml
+++ b/cluster-home/operations/storage/longhorn/helmrelease.yaml
@@ -33,10 +33,7 @@ spec:
       ingressClassName: nginx
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
-        nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-proxy-outpost.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
-        nginx.ingress.kubernetes.io/auth-signin: https://{{request.object.spec.rules[0].host}}/outpost.goauthentik.io/start?rd=$escaped_request_uri
-        nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid,authorization"
-        nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
+        authentik.home.arpa/enabled: "true"
       host: longhorn.buvis.net
       tls: true
       tlsSecret: longhorn-tls
