Fix ntfy not starting with upstream url only

--- a/cluster-home/operations/smarthome/ntfy/helmrelease.yaml
+++ b/cluster-home/operations/smarthome/ntfy/helmrelease.yaml
@@ -53,6 +53,7 @@ spec:
               NTFY_AUTH_DEFAULT_ACCESS: deny-all
               NTFY_AUTH_FILE: /var/lib/ntfy/user.db
               NTFY_UPSTREAM_BASE_URL: "https://ntfy.sh"
+              NTFY_BASE_URL: "https://ntfy.buvis.net"
             args:
               - serve
     persistence:
