Reduce replicas count

--- a/cluster-home/operations/media/tdarr/helmrelease.yaml
+++ b/cluster-home/operations/media/tdarr/helmrelease.yaml
@@ -89,7 +89,7 @@ spec:
           - path: /media/videos
       cache:
         enabled: true
-        existingClaim: tdarr-cache
+        type: emptyDir
         globalMounts: []
         advancedMounts:
           node:
