--- a/cluster-home/operations/kube-tools/ingress-nginx/helmrelease.yaml
+++ b/cluster-home/operations/kube-tools/ingress-nginx/helmrelease.yaml
@@ -5,7 +5,7 @@ metadata:
   name: ingress-nginx
   namespace: kube-tools
 spec:
-interval: 5m
+  interval: 5m
   install:
     timeout: 15m
     remediation:
@@ -39,7 +39,13 @@ interval: 5m
         annotations:
           lbipam.cilium.io/ips: ${SVC_IP_INGRESS}
       replicaCount: 3
-affinity:
+      resources:
+        requests:
+          cpu: 500m
+          memory: 1Gi
+        limits:
+          memory: 2Gi
+      affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - weight: 100
