--- a/cluster-home/operations/openfaas/openfaas/helmrelease.yaml
+++ b/cluster-home/operations/openfaas/openfaas/helmrelease.yaml
@@ -33,3 +33,24 @@ spec:
   values:
     functionNamespace: openfaas-fn
     generateBasicAuth: true
+    gateway:
+      resources:
+        requests:
+          cpu: 100m
+          memory: 128Mi
+        limits:
+          memory: 512Mi
+    queueWorker:
+      resources:
+        requests:
+          cpu: 50m
+          memory: 64Mi
+        limits:
+          memory: 256Mi
+    operator:
+      resources:
+        requests:
+          cpu: 50m
+          memory: 64Mi
+        limits:
+          memory: 128Mi
