--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -37,6 +37,12 @@ spec:
   values:
     kubernetesIntegration: true
     server:
+      resources:
+        requests:
+          cpu: 150m
+          memory: 512Mi
+        limits:
+          memory: 1Gi
       ingress:
         enabled: true
         ingressClassName: nginx
