--- a/cluster-home/operations/storage/longhorn/helmrelease.yaml
+++ b/cluster-home/operations/storage/longhorn/helmrelease.yaml
@@ -32,6 +32,12 @@ spec:
       replicaZoneSoftAntiAffinity: "true"
       replicaSoftAntiAffinity: "true"
       replicaZoneSoftAntiAffinity: "true"
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
+      limits:
+        memory: 256Mi
     ingress:
       enabled: true
       ingressClassName: nginx
