Fix tdarr-node failing

--- a/cluster-home/operations/media/tdarr/helmrelease.yaml
+++ b/cluster-home/operations/media/tdarr/helmrelease.yaml
@@ -101,7 +101,7 @@ spec:
           - path: /media/videos
       cache:
         enabled: true
-        type: emptyDir
+        existingClaim: tdarr-cache
         globalMounts: []
         advancedMounts:
           node:
