Reduce space usage from WALs

--- a/cluster-home/operations/storage/cnpg/databases/buvis-pg-cluster.yaml
+++ b/cluster-home/operations/storage/cnpg/databases/buvis-pg-cluster.yaml
@@ -15,9 +15,13 @@ spec:
         - ReadWriteOnce
       resources:
         requests:
-          storage: 10Gi
+          storage: 20Gi
       storageClassName: longhorn
       volumeMode: Filesystem
+  postgresql:
+    parameters:
+      archive_timeout: "30min"  # Reduce WAL generation on idle database (default was 5min)
+      wal_keep_size: "128MB"    # Keep less WAL for replicas (down from 512MB)
   plugins:
     - name: barman-cloud.cloudnative-pg.io
       enabled: true
